fixes z-index issue

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/omni-nav.scss
@@ -620,7 +620,7 @@ html.omni-nav-v2 {
     position: absolute;
     top: 60px; left: 0px;
     width: $primary-nav-dropdown-width;
-    z-index: 667;
+    z-index: 668; //needs to be on top of primary-nav
 
     ul {
       list-style-type: none;
